# ChangeLog for dev-lisp/sbcl
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.142 2008/05/01 09:13:47 dertobi123 Exp $

  01 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> sbcl-1.0.14.ebuild:
  ppc stable, bug #218706

  26 Apr 2008; Markus Meier <maekke@gentoo.org> sbcl-1.0.14.ebuild:
  amd64/x86 stable, bug #218706

  21 Apr 2008; Ferris McCormick <fmccor@gentoo.org> sbcl-1.0.14.ebuild:
  Sparc stable --- Bug #218706 --- tests run fine.

*sbcl-1.0.15 (02 Mar 2008)

  02 Mar 2008; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.15.ebuild:
  bump, will hang on tests :(

*sbcl-1.0.14 (28 Jan 2008)

  28 Jan 2008; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.14.ebuild:
  bump:
  * new feature: SB-EXT:*EXIT-HOOKS* are called when the process exits
    (see documentation for details.)
  * revived support for OpenBSD (contributed by Josh Elsasser)
  * partially fixed bug #108: ROOM no longer suffers from occasional
    (AVER (SAP= CURRENT END)) failures .
  * fixed bug #402: proclaimed non-standard declarations in DEFMETHOD
    bodies no longer cause a WARNING to be signalled. (reported by
    Vincent Arkesteijn)
  * bug fix: (TRUNCATE X 0) when X is a bignum now correctly signals
    DIVISION-BY-ZERO. Similarly for MOD and REM (which suffered due to
    the bug in TRUNCATE.) (reported by Michael Weber)
  * bug fix: SB-SPROF:REPORT no longer signals an error if there are
    no samples. (reported by Andy Hefner)
  * bug fix: functions compiled using (COMPILE NIL '(LAMBDA ...))
    no longer appear as (NIL ...) frames in backtraces.
  * bug fix: RESOLVE-CONFLICT (and the other name conflict machinery)
    is now actually exported from SB-EXT as documented.  (reported by
    Maciej Katafiasz)
  * bug fix: sb-aclrepl now correctly understands how to inspect
    single-floats on 64-bit platforms where single-floats are not boxed.