@@ -19,6 +19,6 @@ DIST sbcl-1.0.2-powerpc-darwin-binary.tar.bz2 7102079 RMD160 c8daff886b3c1afee17
 DIST sbcl-1.0.7-x86-darwin-binary.tar.bz2 7833780 RMD160 ef040903fcf28856022ecb5981375f89e61987f6 SHA1 7e4a68676046572c67894e962e2d18836d8586a8 SHA256 4437347e608c0c7a95aef87f358457f3a06de99a7ce665a05dfa4e159f3a32fb
 EBUILD sbcl-1.0.13.ebuild 6996 RMD160 51af7680431c84d1645dc4a7bd94c559f8151b55 SHA1 4b7994030661ae7dafb2df5726f69bbf1e5a8e22 SHA256 a3dba4537458a717a20ac3882a1d406b56ce4c7965b2f791095009f344aa1acd
 EBUILD sbcl-1.0.14.ebuild 7001 RMD160 785d81091f75ce7ba52310fdfc13e533ae81d5db SHA1 716eb3575aef0965d0419c94ab6d840ec5abbb06 SHA256 0f70e6c84d8de5656c5ac08021e7ad84953938b5cbe99ebcce0872a2857eba49
-EBUILD sbcl-1.0.15.ebuild 7053 RMD160 0369ed41d0076e21b470b6e86ddf1b531f47093e SHA1 b66ee8241285cc5c124355fc94c937c71905c126 SHA256 fb32258034f01621759f98de387f8a96e512d59148b88e7f90efc6809b0ce842
-MISC ChangeLog 43545 RMD160 884b9e92a09188759c729d0cb6ca8601b4ff206b SHA1 7697a69fe471cb733326018b240d4a45688a2283 SHA256 71a74c2b02c80c8f436e3aaaa98f322aa7aac09465904d8c0f0e7d7e299770e0
+EBUILD sbcl-1.0.15.ebuild 7062 RMD160 abf15acd865e85e7f7b3a49e1b079d18d835aa9b SHA1 d95a03a4b445cef2a2f529ceeff37a388bda0c52 SHA256 5c3f7141768425564aab992b7e63d6e5d099724a89090435d9b3dc5b77416b89
+MISC ChangeLog 43653 RMD160 17d7ded5eb6945727a43dda72dfa0bbe192f5f23 SHA1 682ec44cb4cadbc0548d78fcaa05e0a5598becfb SHA256 36b6a7c95041adfb76220f7c7b4dfd638a44bff79f745d1aaa502116979094f3
 MISC metadata.xml 1004 RMD160 79462681370688e5a3700593b5b6c9401bb7ccde SHA1 b800796ace836a62cd9d500487f3c6e21d89f5f8 SHA256 4cb74fa43cdc4e8291063beae14ca74fb605508225913474763ad3fb7e6985d7
