@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.142 2008/05/01 09:13:47 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.143 2008/05/12 15:24:12 hkbst Exp $
+
+  12 May 2008; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.15.ebuild:
+  fix circular dep issue with gentoo-init
 
   01 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> sbcl-1.0.14.ebuild:
   ppc stable, bug #218706
